# holosoma_custom

./: .gitignore  .gitmodules  README.md  holosoma.code-workspace  setup_holosoma.sh
src/holosoma_data/: .gitignore  README.md  pyproject.toml
src/holosoma_data/holosoma_data/: __init__.py
src/holosoma_data/holosoma_data/objects/largebox/: largebox.xml
src/holosoma_data/holosoma_data/pipeline/converted/g1_29dof/whole_body_tracking/: objects_largebox.urdf
src/holosoma_data/holosoma_data/pipeline/retargeted/g1_29dof/omniretarget/sub10_clothesstand_000/: retargeted.npz
src/holosoma_data/holosoma_data/pipeline/retargeted/g1_29dof/omniretarget/sub14_smallbox_003/: retargeted_w_obj_original.npz
src/holosoma_data/holosoma_data/pipeline/retargeted/g1_29dof/omniretarget/sub3_largebox_003/: retargeted_w_obj_original.npz
src/holosoma_data/holosoma_data/pipeline/retargeted/g1_demo/robot_only/amass_smplx/: SFU_0005_0005_2FeetJump001_stageii.npz  SFU_0005_0005_JumpRope001_stageii.npz  SFU_0007_0007_Balance001_stageii.npz  SFU_0012_0012_SpeedVault002_stageii.npz  SFU_0018_0018_DanceTurns001_stageii.npz  SFU_0018_0018_TraditionalChineseDance001_stageii.npz
src/holosoma_data/holosoma_data/pipeline/retargeted/g1_demo/robot_only/omomo/: sub12_tripod_047.npz  sub1_floorlamp_007.npz  (+3 more)
src/holosoma_data/holosoma_data/robots/g1/: g1_27dof_retargeting.urdf  g1_27dof_retargeting.xml  g1_27dof_training.xml  g1_27dof_w_largebox_retargeting.xml  g1_29dof_training.xml
src/holosoma_data/holosoma_data/robots/g1/scenes/: scene_g1_27dof_wbt_plane.xml  scene_g1_29dof_wbt_plane.xml
(+210 files in other folders)
